# rust-web-server

./: Cargo.toml  README.md  articles.json
src/: id_gen.rs  main.rs  test.html
src/webpages/: about_me.html  article.html  articles.html  images.html  login.html  main.html  new_article.html  style.css
src/webpages/admin/: login.html  main.html  new_article.html
